--- a/MovieWatchlist/MovieWatchlist.csproj
+++ b/MovieWatchlist/MovieWatchlist.csproj
@@ -14,6 +14,8 @@
 
   <ItemGroup>
     <PackageReference Include="MaterialDesignThemes" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Toolkit.Mvvm" Version="7.1.2" />
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.39" />
   </ItemGroup>
 
 </Project>
